# skopeo-wrapper

./: .gitignore  CHANGELOG.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: README_metrics.md  advanced_usage.py  basic_usage.py  grafana_dashboard.json  image_exists_example.py  metrics_usage.py  prometheus.yml  remote_progress_demo.py  skopeo-wrapper-alerts.yml  skopeo-wrapper-heartbeat-alerts.yml  skopeo-wrapper-targets.json
skopeo_wrapper/: __init__.py  cli.py  metrics.py  metrics_server.py  skopeo_wrapper.py
tests/: __init__.py  test_metrics.py  test_skopeo_wrapper.py
